--- a/styles.css
+++ b/styles.css
@@ -225,34 +225,52 @@ ul.navbar li a:hover {
   background-color: rgba(3, 3, 3, 0.205);
 }
 
+.dropbtn {
+  background-color: rgba(255, 255, 255, 0);
+  color: black;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* The container <div> - needed to position the dropdown content */
 .dropdown {
-  padding: 15px;
   position: relative;
   display: inline-block;
 }
 
-.dropdown span{
-  border-color: black;
-  color: #000;
-  border-radius: 5px;
-  padding: 20px;
-}
-
+/* Dropdown Content (Hidden by Default) */
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: rgba(0, 0, 0, 0.658);
-  min-width: 160px;
-  color: white;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  padding: 12px 16px;
+  background-color: rgba(0, 0, 0, 0.664);
   border-radius: 5px;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
-
 }
 
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
   display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  background-color: rgba(255, 255, 255, 0);
+  color: white;
 }
 
 
